@@ -261,8 +261,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="d-grid gap-2">
-                    <button class="btn btn-secondary" type="button">Ricerca</button>
+                <div class="d-grid gap-2 d-flex justify-content-center">
+                    <button class="btn btn-secondary command-button" type="button">Ricerca</button>
                 </div>
             </div>
         </div>
