@@ -252,13 +252,12 @@
                     </table>
                 </div>
                 <div class="col-lg-4 d-flex flex-column align-items-center justify-content-center">
-                    <button type="button" class="btn btn-secondary command-button">Aggiungi al carrello</button><br>
-                    <button type="button" class="btn btn-secondary command-button">Aggiungi alla lista dei desideri</button><br>
-                    <button type="button" class="btn btn-secondary command-button">Torna indietro</button>
+                    <button type="button" class="btn btn-secondary command-button command-button-icon"><img src="../../img/static/shopping-cart.svg">Aggiungi al carrello</button><br>
+                    <button type="button" class="btn btn-secondary command-button command-button-icon"><img src="../../img/static/gift.svg">Lista dei desideri</button><br>
+                    <button type="button" class="btn btn-secondary command-button command-button-icon"><img src="../../img/static/go-back.svg">Torna indietro</button>
                 </div>
             </div>
         </div>
-
 
         <!-- Footer -->
         <footer>
